# pixple-backend

./: .env.example  Cargo.toml  README.md  database.types.ts  index.html  metadata.json  package.json  pnpm-lock.yaml  server.ts  setting.sql  vercel.json
api/: community-comment-write.rs  community-comment.rs  community-write.rs  community.rs  gemini-api.rs
app/: layout.tsx  page.tsx
app/api/community/: route.ts
app/api/community/comment/: route.ts
app/api/community/comment/like/: route.ts
app/api/community/comment/write/: route.ts
app/api/community/write/: route.ts
app/api/db-st/: route.ts
app/api/db-status/: route.ts
app/api/gemini-api/: route.ts
components/app/: AnalysisApiView.tsx  ApiDocsView.tsx  CommunityApiView.tsx  DashboardView.tsx  Gatekeeper.tsx  SettingsView.tsx
lib/: constants.ts  database.types.ts  db.ts  types.ts
src/: App.tsx  constants.ts  db.ts  libs.rs  main.rs  models.rs  state.rs  types.ts  utils.rs
src/components/: AnalysisApiView.tsx  ApiDocsView.tsx  CommunityApiView.tsx  DashboardView.tsx  Gatekeeper.tsx  SettingsView.tsx
src/routes/: community.rs  gemini-api.rs
