[package]
name = "pixple-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
lambda_http = "0.13"
lambda_runtime = "0.13"
tower = "0.5"

[[bin]]
name = "gemini-api"
path = "routes/gemini-api.rs"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
