[package]
name = "pixple-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
vercel_runtime = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

[[bin]]
name = "gemini-api"
path = "api/gemini-api.rs"

[[bin]]
name = "community-write"
path = "api/community-write.rs"

[[bin]]
name = "community"
path = "api/community.rs"

[[bin]]
name = "community-comment"
path = "api/community-comment.rs"

[[bin]]
name = "community-comment-write"
path = "api/community-comment-write.rs"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
